--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ db/*.sqlite3
 .rspec
 .redcar/
 .sass-cache
-/config/config.yml
 /config/database.yml
 /coverage.data
 /coverage/
@@ -81,3 +80,6 @@ tags
 zeus.json
 *.template
 *.tmp
+*.sw*
+Vagrantfile
+.vagrant
