--- a/config/config.yml
+++ b/config/config.yml
@@ -4,6 +4,7 @@ default: &defaults
   webserver_port: 80
   application_port: 80
   load_balancer_protocol: 'HTTP'
+  status_check_interval: 5
   
 development:
   <<: *defaults
