1. production environments should compile assets 2. database.yml.example updated to increase default pool size 3. README.md updated to help new devs get the app running

--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -36,7 +36,7 @@ production:
   encoding: utf8
   reconnect: false
   database: visual_cloud_production
-  pool: 5
+  pool: 500
   username: root
   password: root
-  host: localhost
+  host: 127.0.0.1
