Chef server URL for development changed to localhost

--- a/config/config.yml
+++ b/config/config.yml
@@ -8,7 +8,7 @@ default: &defaults
   
 development:
   <<: *defaults
-  chef_server_url: 'http://ec2-23-20-146-55.compute-1.amazonaws.com:4000'
+  chef_server_url: 'localhost:4000'
 
 production:
   <<: *defaults
