1)Fetch key pair and security group over AWS API, show them as select input. 2)Updated specs , removed some automatically generated specs

--- a/config/config.yml
+++ b/config/config.yml
@@ -13,3 +13,7 @@ development:
 production:
   <<: *defaults
   chef_server_url: 'http://ec2-23-20-146-55.compute-1.amazonaws.com:4000'
+
+test:
+  <<: *defaults
+  chef_server_url: 'localhost:4000'
