--- a/config/config.yml
+++ b/config/config.yml
@@ -5,7 +5,7 @@ default: &defaults
   application_port: 80
   load_balancer_protocol: 'HTTP'
   status_check_interval: 5
-  
+  s3_access_control: ["Private","PublicRead","PublicReadWrite","AuthenticatedRead","BucketOwnerRead","BucketOwnerFullControl"]  
 development:
   <<: *defaults
   chef_server_url: 'localhost:4000'
