--- a/config/config.yml
+++ b/config/config.yml
@@ -6,6 +6,8 @@ default: &defaults
   load_balancer_protocol: 'HTTP'
   status_check_interval: 5
   s3_access_control: ["Private","PublicRead","PublicReadWrite","AuthenticatedRead","BucketOwnerRead","BucketOwnerFullControl"]  
+  strings_max_length: 10 
+
 development:
   <<: *defaults
   chef_server_url: 'localhost:4000'
