1.Elastic IP support for EC2 2.Java 6 and 7 versions supported 3.Output parameter supported 4.Status check refactored 5.Individual queries for Instances commented for later refactoring. 6.TODO lines added for refactor candidates 7.Bucket name and dns name of S3 buckets displayed on config modal

--- a/config/config.yml
+++ b/config/config.yml
@@ -5,8 +5,9 @@ default: &defaults
   application_port: 80
   load_balancer_protocol: 'HTTP'
   status_check_interval: 5
-  s3_access_control: ["Private","PublicRead","PublicReadWrite","AuthenticatedRead","BucketOwnerRead","BucketOwnerFullControl"]  
-  strings_max_length: 10 
+  s3_access_control: ["Private","PublicRead","PublicReadWrite","AuthenticatedRead","BucketOwnerRead","BucketOwnerFullControl"]
+  java_versions: ["6","7"]
+  strings_max_length: 10
 
 development:
   <<: *defaults
